# ros-bridge

./: .gitmodules  README.md
carla_ackermann_control/config/: settings.yaml
carla_ackermann_control/src/carla_ackermann_control/: carla_control_physics.py
carla_ros_bridge/src/carla_ros_bridge/: actor_factory.py  bridge.py  camera.py  ego_vehicle.py  gnss.py  imu.py  lidar.py  pseudo_actor.py
carla_spawn_objects/src/carla_spawn_objects/: carla_spawn_objects.py
pcl_recorder/: CMakeLists.txt  package.xml
ros_compatibility/src/ros_compatibility/: node.py
