<?xml version="1.0"?>
<package format="3">
  <name>pcl_recorder</name>
  <version>0.0.0</version>
  <description>The pcl_recorder package</description>
  <maintainer email="carla.simulator@gmail.com">CARLA Simulator Team</maintainer>
  <license>MIT</license>

  <!-- ROS 2 DEPENDENCIES-->
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2_ros</depend>

  <build_depend>pcl_conversions</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>carla_ros_bridge</exec_depend>
  
  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
